# gemma3-function-calling-tutorial

./: .gitignore  code.ipynb  generate.ipynb  pyproject.toml  readme.md  tutorial.ipynb
notebooks/: code.ipynb  generate.ipynb
prompts/: gemma3:12b.md  gemma3:27b-it-qat.md
prompts/function-calling/: gemma3:12b.md  gemma3:27b-it-qat.md
prompts/function-writing/: gemma3.md
toolkit/: __init__.py  code.py  functions.py  model.py  prompts.py
