[project]
name = "function-calling-tutorial"
version = "0.1.0"
description = "A tutorial on function calling using Gemma 3 via Ollama."
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "microsandbox>=0.1.8",
    "requests>=2.32.4",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
